# luma

./: .gitattributes  .gitignore  Cargo.toml  README.md  taplo.toml
assets/shaders/: camera.glsl  closest-hit.slang  closest_hit.rchit  common.glsl  common.slang  compute.glsl  main.comp  miss.slang  noise.glsl  raygen.rgen  raygen.slang
crates/luma-render/: Cargo.toml
crates/luma-render/src/: blas.rs  buffer.rs  camera.rs  lib.rs  mesh.rs  ray_tracing.rs  render_asset.rs  render_device.rs  render_queue.rs  schedule.rs  storage_image.rs  swapchain.rs  tlas.rs
src/: asset.rs  camera.rs  flycam.rs  gltf.rs  main.rs  panic.rs  renderer.rs  shader.rs
src/renderer/: acceleration_structure.rs  buffer.rs  compute_pipeline.rs  device.rs  egui_renderer.rs  frame.rs  mesh.rs  mod.rs  ray_tracing.rs  render_asset.rs  render_context.rs  render_device.rs  render_queue.rs  resource_state_tracker.rs  schedule.rs  shader.rs  storage_image.rs  swapchain.rs  tlas.rs
