[package]
name = "lys"
version = "0.1.0"
edition = "2021"

[profile.dev]
opt-level = 1

[profile.dev.package."*"]
opt-level = 3

[dependencies]
anyhow = "1.0.99"
ash = "0.38.0"
ash-window = "0.13.0"
bytemuck = { version = "1.23.2", features = ["derive"] }
raw-window-handle = "0.6.2"
shaderc = "0.10.1"
tracing = "0.1.41"

[dependencies.bevy]
default-features = false
features = ["bevy_asset", "bevy_log", "bevy_state", "bevy_window", "bevy_winit"]
version = "0.16.1"
