[package]
name = "luma"
version = "0.1.0"
edition = "2024"

[workspace]
members = ["crates/*"]

[profile.dev]
opt-level = 1

[profile.dev.package."*"]
opt-level = 3

[workspace.dependencies]
anyhow = "1.0.102"
serde = "1.0.228"
tracing = "0.1.44"
egui = "0.33.3"

bevy = { version = "0.18.1", default-features = false, features = [
    "bevy_asset",
    "bevy_gilrs",
    "bevy_log",
    "bevy_mesh",
    "bevy_state",
    "bevy_window",
    "bevy_winit",
    "debug",
    "file_watcher",
] }

[dependencies]
luma-render = { path = "crates/luma-render" }

anyhow = { workspace = true }
bevy = { workspace = true }
egui = { workspace = true }
tracing = { workspace = true }

gltf = "1.4.1"
native-dialog = "0.9.6"
