[package]
name = "luma-render"
version = "0.1.0"
edition = "2024"

[dependencies]
anyhow = { workspace = true }
bevy = { workspace = true }
egui = { workspace = true }
serde = { workspace = true }
tracing = { workspace = true }

ash = "0.38.0"
ash-window = "0.13.0"
bytemuck = { version = "1.25.0", features = ["derive"] }
egui-ash-renderer = { version = "0.11.0", features = [
    "dynamic-rendering",
    "gpu-allocator",
] }
egui-winit = "0.33.3"
raw-window-handle = "0.6.2"
gpu-allocator = { version = "0.28.0", default-features = false, features = [
    "std",
    "vulkan",
] }
